--- a/css_stylesheet.css
+++ b/css_stylesheet.css
@@ -2,67 +2,89 @@
 {
   margin: 0;
   padding: 0;
-  color: rgb(255, 255, 255);
   /*vores valg af font til Hjemmesiden */
- 
+
 }
 
-/*buger menu*/
-.topnav {
-  overflow: hidden;
-  background-color: #7e7e7e;
-  display: flex;
-  justify-content: flex-end;
-}
-  
-.topnav a {
-  float: left;
-  display: block;
-  color: #ffffff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-  
-.topnav a:hover {
-  background-color: #2f2121;
-  color: rgb(255, 206, 80);
-}
-  
-.topnav a.active {
-  background-color: #7b7b7b;
+body{
+  background-color: black;
   color: rgb(255, 255, 255);
-}
   
-.topnav .icon {
-  display: none;
 }
 
+/*vi har valgt at bruge grid og flexboks*/
+.infoConcener{
+  background-color: rgb(57, 57, 57);
+  color: white;
+  display: grid;
+  gap: 20px;
+  padding: 10px;
+  grid-template-areas: 
+    " . .      . "
+    " . itekst . "
+    " . knap   . "
+    " . .      . "
+    ;
   
+}
 
-@media screen and (max-width:600px) {
-  .topnav .icon {
-    display:block;
-    font-size: 100px;       
-  }
-  .topnav a {
-    display:none;
-  }
-  .responsive a {
-    display:block;
-    font-size: 1rem;
-  }
-  .responsive {
-    flex-direction: column;
-    align-items: center;
-    padding: 30px 0;
-  }
-  
-  .responsive .icon {
-    position:absolute;
-    top:0;
-    right:0;
-    color: #ffffff;
-  }
+.infoTekst{
+  grid-area: itekst;
+}
+
+.infoKnap{
+  grid-area: knap;
+}
+
+.infoKnap a {
+  text-decoration: none;
+  background-color: rgb(225, 149, 26);
+  color: white;
+  font-size: large;
+  padding: 5px;
+}
+
+.valgConcener{
+  background-color: rgb(201, 201, 201);
+  color: rgb(0, 0, 0);
+  display: grid;
+  gap: 20px;
+  padding: 10px;
+  grid-template-areas: 
+    " vtekst  vtekst vtekst  vtekst"
+    " .       bvalg   dvalg  . "
+    " .       evalg   svalg  . ";
+}
+
+.valgtekst{ 
+  grid-area: vtekst;
+}
+
+.benzinValg{
+  background-color: rgba(0, 0, 255, 0.495);
+  height: 50px;
+  text-align: center;
+  text-justify: center;
+  grid-area: bvalg;
+}
+
+.elbilValg{
+ background-color: rgba(0, 0, 255, 0.495);
+ height: 50px;
+ text-align: center;
+ grid-area: evalg;
+}
+
+.diselValg{
+ background-color: rgba(0, 0, 255, 0.495);
+ height: 50px;
+ text-align: center;
+ grid-area: dvalg;
+}
+
+.sportValg{
+ background-color: rgba(0, 0, 255, 0.495);
+ height: 50px;
+ text-align: center;
+ grid-area: svalg;
 }
