--- a/css_stylesheet.css
+++ b/css_stylesheet.css
@@ -12,7 +12,38 @@ body{
   
 }
 
+/* Top navigation */
+.topnav {
+  background-color: black;
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color:  rgb(225, 149, 26);
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
 /*vi har valgt at bruge grid og flexboks*/
+
 .infoConcener{
   background-color: rgb(57, 57, 57);
   color: white;
@@ -88,3 +119,31 @@ body{
  text-align: center;
  grid-area: svalg;
 }
+
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
+
+
+
