--- a/css_stylesheet.css
+++ b/css_stylesheet.css
@@ -1,15 +1,11 @@
-* 
-{
+* {
   margin: 0;
   padding: 0;
-  /*vores valg af font til Hjemmesiden */
-
 }
-
 body{
   background-color: black;
   color: rgb(255, 255, 255);
-  
+  font-family: "poppins";
 }
 
 /* Top navigation */
@@ -17,9 +13,8 @@ body{
   background-color: black;
   overflow: hidden;
 }
-
 .topnav a {
-  float: left;
+  float: right;
   display: block;
   color: #f2f2f2;
   text-align: center;
@@ -27,110 +22,73 @@ body{
   text-decoration: none;
   font-size: 17px;
 }
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
 .topnav a.active {
   background-color:  rgb(225, 149, 26);
   color: white;
+  float: left;
 }
-
 .topnav .icon {
   display: none;
 }
-
-/*vi har valgt at bruge grid og flexboks*/
-
-.infoConcener{
-  background-color: rgb(57, 57, 57);
-  color: white;
-  display: grid;
-  gap: 20px;
-  padding: 10px;
-  grid-template-areas: 
-    " . .      . "
-    " . itekst . "
-    " . knap   . "
-    " . .      . "
-    ;
-  
-}
-
-.infoTekst{
-  grid-area: itekst;
-}
-
-.infoKnap{
-  grid-area: knap;
-}
-
-.infoKnap a {
-  text-decoration: none;
+/* Top navigation dropdown menu */
+.topnav a:hover, .dropdown:hover .dropbtn {
   background-color: rgb(225, 149, 26);
   color: white;
-  font-size: large;
-  padding: 5px;
+}
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 10px 30px 0px rgb(225, 149, 26);
+  z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: rgb(225, 149, 26);
+  color: white;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
-.valgConcener{
-  background-color: rgb(201, 201, 201);
-  color: rgb(0, 0, 0);
-  display: grid;
-  gap: 20px;
-  padding: 10px;
-  grid-template-areas: 
-    " vtekst  vtekst vtekst  vtekst"
-    " .       bvalg   dvalg  . "
-    " .       evalg   svalg  . ";
-}
-
-.valgtekst{ 
-  grid-area: vtekst;
-}
-
-.benzinValg{
-  background-color: rgba(0, 0, 255, 0.495);
-  height: 50px;
-  text-align: center;
-  text-justify: center;
-  grid-area: bvalg;
-}
-
-.elbilValg{
- background-color: rgba(0, 0, 255, 0.495);
- height: 50px;
- text-align: center;
- grid-area: evalg;
-}
-
-.diselValg{
- background-color: rgba(0, 0, 255, 0.495);
- height: 50px;
- text-align: center;
- grid-area: dvalg;
-}
-
-.sportValg{
- background-color: rgba(0, 0, 255, 0.495);
- height: 50px;
- text-align: center;
- grid-area: svalg;
-}
+/* om os siden / kontakside */
 
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+
 @media screen and (max-width: 600px) {
 
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
   }
-
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
@@ -141,6 +99,18 @@ body{
     display: block;
     text-align: left;
   }
+  .topnav.responsive .dropdown {
+    float: none;
+  }
+  .topnav.responsive .dropdown-content {
+    position: relative ; 
+  }
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+
 }
 
 
