--- a/css_stylesheet.css
+++ b/css_stylesheet.css
@@ -4,42 +4,51 @@
 }
 body{
   background-color: black;
-  color: rgb(255, 255, 255);
+  color: white;
   font-family: "poppins";
+  
 }
 
-/* Top navigation */
+/* Top navigation rgb(225, 149, 26);
+                  rgb(255,214,0)  ny farve*/
+
 .topnav {
   background-color: black;
   overflow: hidden;
+  
 }
 .topnav a {
   float: right;
   display: block;
-  color: #f2f2f2;
+  color: rgb(255, 255, 255);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  font-weight: bold;
 }
 .topnav a.active {
-  background-color:  rgb(225, 149, 26);
-  color: white;
+  background-color:  rgb(255,214,0);
+  color: black;
   float: left;
 }
 .topnav .icon {
   display: none;
 }
+
 /* Top navigation dropdown menu */
+
 .topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(225, 149, 26);
-  color: white;
+  background-color: rgb(255,214,0);
+  color: rgb(0, 0, 0);
+  font-weight: bold;
 }
 .dropdown {
   float: right;
   overflow: hidden;
 }
 .dropdown .dropbtn {
+  font-weight: bold;
   font-size: 17px;
   border: none;
   outline: none;
@@ -52,9 +61,9 @@ body{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
   min-width: 160px;
-  box-shadow: 0px 10px 30px 0px rgb(225, 149, 26);
+  box-shadow: 0px 10px 30px 0px rgb(255,214,0);
   z-index: 1;
 }
 .dropdown-content a {
@@ -66,8 +75,8 @@ body{
   text-align: left;
 }
 .dropdown-content a:hover {
-  background-color: rgb(225, 149, 26);
-  color: white;
+  background-color: rgb(255,214,0);
+  color: black;
 }
 .dropdown:hover .dropdown-content {
   display: block;
@@ -75,13 +84,156 @@ body{
 
 /* om os siden / kontakside */
 
-/* om os*/
+.header{
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.headerText {
+  font-size: xx-large;
+  position: absolute;
+  top: 20%;
+  left: 7%;
+}
+.button {
+  padding: 10px 10px;
+  font-size: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: black;
+  background-color: rgb(255,214,0);
+  border: none;
+  border-radius: 10px;
+}
+.button:hover {
+  background-color: #fff;
+  color: black;
+}
+.button:active {
+  background-color: #ffffff;
+  color: #fff;
+  box-shadow: 0 5px #ffffff;
+  transform: translateY(4px);
+}
+.imgContainer{
+  display: flex;
+}
 
+/* om os  */
 
 .omos p {
-  margin: 2%;
-  padding: 5%;
+  margin: 10%;
 }
+
+/* billeder om os  */
+
+.container {
+  position: relative;
+  width: 430;
+}
+.image {
+  display: block;
+  height: 100%;
+  width: 100%;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .7s ease;
+  background-color: rgb(255,214,0);
+}
+.container:hover .overlay {
+  opacity: 1;
+}
+.text {
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* kontakt os */
+
+.oplysninger  {
+  background-color: rgb(255,214,0);
+  color: black;
+  font-weight: bold;
+  padding: 2%;
+}
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 35px;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+/* kontaktformular */
+.container {
+  width: 100;
+  border-radius: 5px;
+  background-color: #ffffff;
+  color: black;
+  padding: 20px;
+  
+}
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+input[type=submit] {
+  background-color: rgb(225, 149, 26);
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+input[type=submit]:hover {
+  background-color: #fff;
+  color: black;
+}
+
+/* footer */
+.footer{
+  padding: 5%;
+  font-size: small;
+}
+
 
 
 @media screen and (max-width: 600px) {
